# projects

./: README.md
UAV/Fuselage/: tailfin_mount.stl
UAV/Tail/: vtail_l_clip.stl  vtail_l_control_surface.stl  vtail_l_root.stl  vtail_l_wing.stl  vtail_r_wing.stl
UAV/UAV/Fuselage/: mainbody_1.stl  nosecone.stl  (+2 more)
UAV/Wing/: Clip3.stl  Clip4.stl  Wing2.stl  Wing3.stl
expedition/: README.md
expedition/imu_projects/: CMakeLists.txt  README.md  s.mag_cal
expedition/imu_projects/arduino/altimu_v10_raw_data/alt_imu_raw_data/: alt_imu_raw_data.ino
expedition/imu_projects/arduino/imu_v3/: imu_v3.ino
expedition/imu_projects/heading_imu/: CMakeLists.txt
expedition/imu_projects/heading_imu/davenport_q_method_viewer/: CMakeLists.txt  main_dlg.cpp  main_dlg.ui  widget_gl.cpp  widget_gl.h  work_thread.cpp
expedition/imu_projects/heading_imu/ekf_viewer/: CMakeLists.txt  ekf_quaternion_test.cpp  main_dlg.h  main_dlg.ui  quaternion_ekf.cpp  quaternion_ekf.h  widget_gl.cpp  widget_gl.h  work_thread.cpp  work_thread.h
expedition/imu_projects/heading_imu/enclosure/: enclosure_imu_board.mtl
expedition/imu_projects/heading_imu/imu_raw_data_pico/: imu_raw_data_pico.ino
expedition/imu_projects/heading_imu/obj_reader/: CMakeLists.txt  obj_data_gl.h  obj_reader.cpp  obj_reader.h  obj_reader_test.cpp
expedition/imu_projects/magnetometer_calibration/: CMakeLists.txt  README.md  magnetometer_widget.cpp  magnetometer_widget.h  main_dlg.cpp  main_dlg.h  main_dlg.ui  work_thread.cpp
expedition/imu_projects/obj_file/: CMakeLists.txt  obj_data_gl.cpp  obj_data_gl.h  obj_reader.cpp  obj_reader.h  obj_reader_test.cpp
expedition/imu_projects/quaternion_demo/: main_dlg.cpp  quaternion_test.cpp  widget_gl.cpp
expedition/imu_projects/raw_accel_viewer/: CMakeLists.txt  README.md  graph_widget.cpp  graph_widget.h  main_dlg.cpp  main_dlg.h  main_dlg.ui  work_thread.cpp  work_thread.h
expedition/imu_projects/raw_imu_data_viewer/: work_thread.cpp
expedition/imu_projects/raw_imu_viewer/: CMakeLists.txt  magnetometer_widget.cpp  magnetometer_widget.h  main.cpp  main_dlg.cpp  main_dlg.ui  work_thread.cpp  work_thread.h
expedition/imu_projects/raw_magnetometer_viewer/: CMakeLists.txt  README.md  magnetometer_widget.cpp  magnetometer_widget.h  main_dlg.cpp  main_dlg.h  main_dlg.ui  work_thread.h
expedition/imu_projects/view_magnetometer_calibration/: CMakeLists.txt  magnetometer_widget.cpp  magnetometer_widget.h  main_dlg.cpp  main_dlg.h  main_dlg.ui  work_thread.h
expedition/imu_projects/viewer_with_euler/: CMakeLists.txt  widget_gl.h
expedition/imu_projects/viewer_with_quaternion/: main_dlg.h  widget_gl.cpp
expedition/quaternion/: CMakeLists.txt  README.md
expedition/quaternion/obj_file/: obj_reader.cpp
expedition/quaternion/quaternion_demo/: CMakeLists.txt  main_dlg.h  main_dlg.ui  quaternion.h  widget_gl.h
expedition/quaternion/viewer_with_euler/: main_dlg.cpp  main_dlg.h  main_dlg.ui  widget_gl.cpp
expedition/quaternion/viewer_with_quaternion/: CMakeLists.txt  main_dlg.cpp  main_dlg.ui  widget_gl.cpp  widget_gl.h
expedition/romi_robot/: CMakeLists.txt  README.md
expedition/romi_robot/circular_queue_test/: CMakeLists.txt  circular_queue.h  circular_queue_test.cpp
expedition/romi_robot/graph_image/: CMakeLists.txt  graph_image.cpp  graph_image.h
expedition/romi_robot/pid_tuner/: CMakeLists.txt  graph_widget.cpp  graph_widget.h  main_dlg.cpp  main_dlg.h  main_dlg.ui  work_thread.cpp  work_thread.h
expedition/romi_robot/pid_tuner/arduino/pid_velocity_control/: pid_control.h  pid_velocity_control.ino  romi_pid_motor_control.h
expedition/romi_robot/romi_robot_with_controller/: CMakeLists.txt  main.cpp  romi_robot.cpp  romi_robot.h  work_thread.cpp  work_thread.h
expedition/romi_robot/romi_waypoint_app/: CMakeLists.txt  README.md
expedition/romi_robot/romi_waypoint_app/arduino/cascade_control/: cascade_control.ino  pid_control.h  pid_control.ino
expedition/romi_robot/romi_waypoint_app/romi_path_viewer/: CMakeLists.txt  client.cpp  client.h  comms_thread.cpp  comms_thread.h  imu_data.h  main_client.cpp  main_dlg.cpp  main_dlg.h  main_dlg.ui  path_view_widget.cpp  path_view_widget.h  work_thread.cpp  work_thread.h
expedition/romi_robot/romi_waypoint_app/romi_robot_app/: CMakeLists.txt  main.cpp  motion_control_thread.cpp  motion_control_thread.h  romi_robot_server.cpp  romi_robot_server.h
expedition/romi_robot/romi_waypoint_app/romi_robot_sim_app/: CMakeLists.txt  motion_control_thread.cpp  romi_robot_server.cpp
expedition/romi_robot/velocity_pid_test/: CMakeLists.txt  main.cpp  romi_robot.cpp  test.txt  work_thread.cpp
expedition/romi_robot/velocity_pid_test/arduino/motion_commands/: circular_queue.h  motion_commands.ino  pid_control.ino  romi_pid_motor_control.h  romi_pid_motor_control.ino
helper/: CMakeLists.txt  buffer.h  program.cpp  program.h  texture.cpp  texture.h
raw_imu_data_viewer/: CMakeLists.txt  main_dlg.cpp  main_dlg.h  work_thread.h
usaco/: CMakeLists.txt
usaco/Ball Gown Fitting/: main.cpp
usaco/Bessie's Final Exam/: main.cpp
usaco/Binary Search/: main.cpp
usaco/Calf Finding/: main.cpp
usaco/Color Coding/: main.cpp
usaco/Convert To Base M/: main.cpp
usaco/Convert To Base Ten/: main.cpp
usaco/Cow Covering/: main.cpp
usaco/Crop Harvester/: main.cpp
usaco/Discow/: main.cpp
usaco/Election Time/: main.cpp
usaco/Fertilizer Fever/: main.cpp
usaco/Fun With Octal/: main.cpp
usaco/Generating Triangles/: main.cpp
usaco/Good Grass/: main.cpp
usaco/Horn, Grass, Shears/: main.cpp
usaco/Layering Sod/: main.cpp
usaco/Math Expression/: main.cpp
usaco/Message Relay/: main.cpp
usaco/Milk Queue/: main.cpp  test.txt
usaco/Milk Schedule/: main.cpp
usaco/MooTimes/: main.cpp
usaco/Picture Game/: test.txt
usaco/Playing Time/: main.cpp
usaco/Quadrants/: main.cpp
usaco/Radar Brands/: main.cpp
usaco/Secret Mission/: main.cpp  test.txt
usaco/Spring Cleaning/: main.cpp
usaco/Stone Swapping/: main.cpp  test.txt
usaco/System Installation/: main.cpp
usaco/Task Assignment/: main.cpp
usaco/Working Time/: main.cpp
(+8 files in other folders)
