cmake_minimum_required (VERSION 3.8)
project("usaco_practice")
add_executable("MooTimes" "MooTimes/main.cpp")
add_executable("SecretMission" "Secret Mission/main.cpp")
add_executable("PictureGame" "Picture Game/main.cpp")
add_executable("ColorCoding" "Color Coding/main.cpp")
add_executable("AcornShuffle" "Acorn Shuffle/main.cpp")
add_executable("Discow" "Discow/main.cpp")
add_executable("SystemInstallation" "System Installation/main.cpp")
add_executable("MathExpression" "Math Expression/main.cpp")
add_executable("SpringCleaning" "Spring Cleaning/main.cpp")
add_executable("GeneratingTriangles" "Generating Triangles/main.cpp")
option(ENABLE_VCPKG OFF)