cmake_minimum_required(VERSION 3.8.2)

project(quaternion)

add_subdirectory(./../../helper helper)
add_subdirectory(./quaternion_demo quaternion_demo)
add_subdirectory(./obj_file obj_file)
add_subdirectory(./viewer_with_euler viewer_with_euler)
add_subdirectory(./viewer_with_quaternion viewer_with_quaternion)